# campus

./: README.md  compile  diy_scanf.cpp  matrix_multiplication.c  server_multiple_udp.cpp  temperature_converter.c
GPA_System/: Mahasiswa.ctxt  Mahasiswa.java  MataKuliah.ctxt  MataKuliah.java  Nilai.ctxt  Nilai.java  package.bluej
anssip_stm32f103/: README.md  README.md~
cvision-scratch/: CMakeLists.txt  README.md
cvision-scratch/experimental/: compile.sh
cvision-scratch/experimental/src/: cvision-experimental.cpp  sanity-check.cpp  simple_non-recv_flood_test.cpp  template-test.cpp
cvision-scratch/experimental/src/exerciseone/: access-mat.cpp  color-distance.cpp  enigma.cpp  find-region-and-perimeter.cpp  find_region.cpp  find_region_mat.cpp  flood-fill-and-perimeter-rev-0.cpp  flood-fill-rev-0.cpp  mat-type.cpp  sanity-check.cpp
cvision-scratch/experimental/src/exercisetwo/: find_region_perimeter_smoothing_mat.cpp  gaussian-kernel.cpp  simple-smoothing.cpp
cvision-scratch/include/: ImageAIO.h  ImageProcessing.h  PerimeterData.h  PixelListData.h  RegionData.h  SmoothData.h
cvision-scratch/sample/: CMakeCache.txt  ImageProcessing.cpp  Makefile  cmake_install.cmake  view  view.cpp
cvision-scratch/src/: ARVision.cpp  ImageAIO.cpp  ImageProcessing.cpp  PerimeterData.cpp  PixelListData.cpp  RegionData.cpp  SmoothData.cpp  main.cpp
database_system/: README.md  index.php  proyek_akhir.sql
diy_scanf/: README.md  (+1 more)
square_detection/: CMakeLists.txt  circle_detection.cpp  square-HL.cpp  square-HLBasic.cpp  square.cpp
square_detection/video/: Sore.avi
(+252 files in other folders)
